Updates dependencies to latest libraries, including Scala 2.11.2, SBT 0.13.6, ScalaTest, ScalaCheck, use Scoverage and fixes other issues